# wfc_jsonrpc

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Readme.md  index.html
.ci/: suppressions.txt
.cppcheck/: suppressions.txt
.github/: build_history.txt
cmake/: mambaru.cmake
cov-report/: index-sort-f.html  index-sort-l.html  index.html
cov-report/package/: index-sort-f.html  index-sort-l.html  index.html  jsonrpc_package.cpp.func-sort-c.html  jsonrpc_package.cpp.func.html  jsonrpc_package.cpp.gcov.html  jsonrpc_package.hpp.func-sort-c.html  jsonrpc_package.hpp.func.html  jsonrpc_package.hpp.gcov.html
cov-report/package/backlog/: backlog_module.cpp.func-sort-c.html  backlog_module.cpp.func.html  backlog_module.cpp.gcov.html  backlog_module.hpp.func-sort-c.html  backlog_module.hpp.func.html  backlog_module.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
cov-report/package/batch/: batch_module.cpp.func-sort-c.html  batch_module.cpp.func.html  batch_module.cpp.gcov.html  batch_module.hpp.func-sort-c.html  batch_module.hpp.func.html  batch_module.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
cov-report/package/broker/: broker_module.cpp.func-sort-c.html  broker_module.cpp.func.html  broker_module.cpp.gcov.html  broker_module.hpp.func-sort-c.html  broker_module.hpp.func.html  broker_module.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
cov-report/package/hub/: hub_module.cpp.func-sort-c.html  hub_module.cpp.func.html  hub_module.cpp.gcov.html  hub_module.hpp.func-sort-c.html  hub_module.hpp.func.html  hub_module.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
cov-report/tests/: index-sort-f.html  index-sort-l.html  index.html  matchmaker_suite.cpp.func-sort-c.html  matchmaker_suite.cpp.func.html  matchmaker_suite.cpp.gcov.html  package_suite.cpp.func-sort-c.html  package_suite.cpp.func.html  package_suite.cpp.gcov.html  package_test.cpp.func-sort-c.html  package_test.cpp.func.html  package_test.cpp.gcov.html
domain/broker/: CMakeLists.txt  matchmaker.cpp  matchmaker.hpp
jsonrpc/: CMakeLists.txt  jsonrpc_build_info.h  jsonrpc_package.cpp
jsonrpc/jsonrpc/broker/: broker.cpp  broker.hpp  broker_config.hpp  broker_impl.hpp
jsonrpc/jsonrpc/conveyor/: conveyor.cpp  conveyor.hpp  conveyor_config.hpp
jsonrpc/jsonrpc/gateway/: gateway.cpp  gateway.hpp  gateway_config.hpp
jsonrpc/jsonrpc/repli/: repli.cpp  repli.hpp
jsonrpc/jsonrpc/service/: service.cpp  service.hpp  service_config.hpp
jsonrpc/jsonrpc/strand/: strand.cpp  strand.hpp  strand_config.hpp  strand_impl.hpp  strand_options.hpp
jsonrpc/module/: broker_config_json.hpp  broker_multiton.cpp  broker_multiton.hpp  conveyor_config_json.hpp  conveyor_multiton.cpp  conveyor_multiton.hpp  gateway_config_json.hpp  gateway_multiton.cpp  gateway_multiton.hpp  jsonrpc_module.cpp  jsonrpc_module.hpp  service_config_json.hpp  service_multiton.cpp  service_multiton.hpp  strand_config_json.hpp  strand_multiton.cpp  strand_multiton.hpp
package/: CMakeLists.txt  jsonrpc_package.cpp  jsonrpc_package.hpp
package/backlog/: backlog_module.cpp  backlog_module.hpp
package/backlog/backlog/: backlog.cpp  backlog.hpp  backlog_config.hpp  backlog_config_json.hpp  backlog_multiton.cpp  backlog_multiton.hpp  ibacklog.hpp
package/batch/: batch_module.cpp  batch_module.hpp
package/batch/batch/: batch.cpp  batch.hpp  batch_config.hpp  batch_config_json.hpp  batch_multiton.cpp  batch_multiton.hpp
package/broker/: broker_module.cpp  broker_module.hpp
package/broker/broker/: broker.cpp  broker.hpp  broker_config.hpp  broker_config_json.hpp  broker_impl.hpp  broker_multiton.cpp  broker_multiton.hpp
package/extract/: extract_module.cpp  extract_module.hpp
package/extract/extract/: extract.cpp  extract.hpp  extract_config.hpp  extract_config_json.hpp  extract_multiton.cpp  extract_multiton.hpp
package/hub/: hub_module.cpp  hub_module.hpp
package/hub/hub/: hub.cpp  hub.hpp  hub_config.hpp  hub_config_json.hpp  hub_multiton.cpp  hub_multiton.hpp
package/include/: domain_base.hpp  jsonrpc_adapter.hpp
package/jsonrpc/repli/: repli.hpp  repli_config.hpp  repli_config_json.hpp  repli_multiton.cpp  repli_multiton.hpp
package/jsonrpc/strand/: strand.cpp  strand.hpp
package/module/: gateway_multiton.cpp  gateway_multiton.hpp  jsonrpc_module.cpp  jsonrpc_module.hpp  strand_multiton.hpp
package/queue/: queue_module.cpp  queue_module.hpp
package/queue/domain/: queue.cpp  queue.hpp  queue_config.hpp
package/queue/queue/: queue.cpp  queue.hpp  queue_config.hpp  queue_config_json.hpp  queue_multiton.cpp  queue_multiton.hpp
package/repli/: repli_module.cpp  repli_module.hpp
package/repli/repli/: repli.cpp  repli.hpp  repli_config.hpp  repli_config_json.hpp  repli_multiton.cpp  repli_multiton.hpp
package/statistics/: statistics_module.cpp  statistics_module.hpp
package/statistics/statistics/: statistics.cpp  statistics.hpp  statistics_config.hpp  statistics_config_json.hpp  statistics_multiton.cpp  statistics_multiton.hpp
package/stub/: stub_module.cpp  stub_module.hpp
package/stub/stub/: stub.cpp  stub.hpp  stub_config.hpp  stub_config_json.hpp  stub_multiton.cpp  stub_multiton.hpp
package/workflow/: workflow_module.cpp  workflow_module.hpp
package/workflow/workflow/: workflow.cpp  workflow.hpp  workflow_config.hpp  workflow_config_json.hpp  workflow_multiton.cpp  workflow_multiton.hpp
tests/: CMakeLists.txt  matchmaker_suite.cpp  package_suite.cpp  package_test.cpp
tests/broker/: CMakeLists.txt  broker_suite.cpp  broker_test.cpp
utilites/: CMakeLists.txt
utilites/matchmaker/: CMakeLists.txt  match_mode.hpp  matchmaker.cpp  matchmaker.hpp
utilites/matchmaker/matcher/: array_match.cpp  array_match.hpp  builder.cpp  builder.hpp  full_match.cpp  full_match.hpp  ibuilder.hpp  imatcher.hpp  match_factory.cpp  match_factory.hpp  object_match.cpp  object_match.hpp  prefix_match.cpp  prefix_match.hpp  regex_match.cpp  regex_match.hpp  true_match.cpp  true_match.hpp  variant_match.cpp  variant_match.hpp
(+246 files in other folders)
